--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum ={ version = "0.6"}
-tokio ={ version = "1",features = ["full"]}
+axum = { version = "0.6" }
+tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util", "timeout"] }
 tower-http = { version = "0.4.0" }
 
@@ -15,10 +15,9 @@ json = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-rbs = { version = "4.3"}
-rbatis = { version = "4.3"}
-#rbatis = { version = "4.0",features = ["debug_mode"]}
-rbdc-mysql={version="4.3"}
+sea-orm = { version = "0.12.1", features = ["sqlx-mysql", "runtime-async-std-native-tls", "with-chrono", "debug-print", "macros"] }
+#tracing-subscriber = "0.3.17"
+dotenvy = "0.15.7"
 
 log = "0.4"
 log4rs = "1.0"
