--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 axum ={ version = "0.7.5" }
 tokio ={ version = "1",features = ["full"]}
 tower = { version = "0.4", features = ["util", "timeout"] }
-tower-http = { version = "0.5.2" }
+tower-http = { version = "0.5.2", features = ["cors","trace","fs"] }
 
-json = "0.12"
+# json = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
@@ -21,11 +21,15 @@ rbatis = { version = "4.5"}
 rbdc-mysql={version="4.5"}
 
 log = "0.4"
-log4rs = "1.0"
+log4rs = "1.3"
+tracing = "0.1"
 
-jsonwebtoken = "9.3.0"
+jsonwebtoken = "9.3"
 
-redis = "0.25.3"
+redis = "0.25"
 
 futures = { version = "0.3", default-features = false }
 thiserror = "1.0"
+
+bcrypt = "0.15"
+md5="0.7"
