--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ tower-http = { version = "0.5.2", features = ["cors","trace","fs"] }
 # json = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 
 rbs = { version = "4.5"}
-rbatis = { version = "4.5"}
-#rbatis = { version = "4.0",features = ["debug_mode"]}
+rbatis = { version = "4.5"} #"debug_mode"]
 rbdc-mysql={version="4.5"}
 
 log = "0.4"
@@ -33,3 +33,6 @@ thiserror = "1.0"
 
 bcrypt = "0.15"
 md5="0.7"
+once_cell = "1.19"
+sqlparser = "0.47.0"
+parking_lot = "0.12.3"
