--- a/config/application.yaml
+++ b/config/application.yaml
@@ -1,4 +1,4 @@
-addr: 127.0.0.1:8080
+addr: 127.0.0.1:8000
 # choose ("mem","redis")
 cache_type: redis
 # jwt_secret
@@ -19,10 +19,10 @@ datetime_format: "YYYY-MM-DD hh:mm:ss"
 white_list_api: ["/","/admin/sys_login","/admin/captcha"]
 
 db:
-  #url: mysql:#root:789@192.168.1.199:3306/hello
-  url: mysql:#root:789789@172.17.99.45:3306/axum_admin
-  max_connections: 5
-  min_connections: 1
+  #url: mysql://root:789@192.168.1.199:3306/hello
+  url: mysql://root:789789@172.17.99.45:3306/axum_admin
+  max_connections: 10
+  min_connections: 2
   connect_timeout: 60
 
 redis:
