--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ rbs = { version = "4.5"}
 rbatis = { version = "4.5"} #"debug_mode"]
 rbdc-mysql={version="4.5"}
 
-log = "0.4"
+# log = "0.4"
 log4rs = "1.3"
 tracing = "0.1"
 
@@ -28,11 +28,16 @@ jsonwebtoken = "9.3"
 
 redis = "0.25"
 
-futures = { version = "0.3", default-features = false }
+# futures = { version = "0.3", default-features = false }
 thiserror = "1.0"
 
 bcrypt = "0.15"
 md5="0.7"
 once_cell = "1.19"
-sqlparser = "0.47.0"
-parking_lot = "0.12.3"
+sqlparser = "0.47"
+parking_lot = "0.12"
+rayon = "1.10.0"
+# rayon = "1.10.0"
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.5"
