--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ rbs = { version = "4.5"}
 rbatis = { version = "4.5"} #"debug_mode"]
 rbdc-mysql={version="4.5"}
 
-# log = "0.4"
+log = "0.4"
 log4rs = "1.3"
-tracing = "0.1"
+# tracing = "0.1"
 
 jsonwebtoken = "9.3"
 
