--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ log4rs = "1.3"
 
 jsonwebtoken = "9.3"
 
-redis = "0.25"
+# redis = "0.25"
+bb8-redis = "0.15"
 
 # futures = { version = "0.3", default-features = false }
 thiserror = "1.0"
@@ -36,8 +37,8 @@ md5="0.7"
 once_cell = "1.19"
 sqlparser = "0.47"
 parking_lot = "0.12"
-rayon = "1.10.0"
-# rayon = "1.10.0"
+rayon = "1.10"
+dashmap = {version = "5.5", features = ["rayon"]}
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.5"
